# CTreasuryFutures

./: .gitignore  README.md  pyproject.toml
data/backups/: README.md
data/csv/: README.md
data/csv/eco_calendar/: 全球经济日历-201801.xlsx  全球经济日历-201802.xlsx  全球经济日历-201803.xlsx  全球经济日历-201804.xlsx  全球经济日历-201805.xlsx  全球经济日历-201806.xlsx  全球经济日历-201807.xlsx  全球经济日历-201808.xlsx  全球经济日历-201809.xlsx  全球经济日历-201810.xlsx  全球经济日历-201811.xlsx  全球经济日历-201812.xlsx  全球经济日历-201901.xlsx  全球经济日历-201902.xlsx  全球经济日历-201903.xlsx  全球经济日历-201904.xlsx  全球经济日历-201905.xlsx  全球经济日历-201906.xlsx  全球经济日历-201907.xlsx  全球经济日历-201908.xlsx  全球经济日历-201909.xlsx  全球经济日历-201910.xlsx  (+80 more)
data/database/: README.md
data/input/: T_daily.parquet  eco_calendar_filtered.xlsx
docs/: database_workflow.md  factor_workflow.md
logs/datapipeline/: README.md
logs/factors/: README.md
notebooks/data_pipeline/: 01_TreasuryFutures.ipynb  02_Compare_DuckDB_vs_T_mindf.ipynb
notebooks/datapipeline/: CSV_First_Data_Pipeline.ipynb  CSV_First_Data_Pipeline.py  Compare_DuckDB_vs_T_mindf.ipynb
notebooks/factors/: Backtest_Final_9_Category_Factors.ipynb  Data_Input_and_Quality.ipynb  Roll_Migration_Monitor.ipynb
reports/data_pipeline/: minute_data_comparison.xlsx
src/datapipeline/: __init__.py  daily_data_pipeline.py  data_pipeline.py  duckdb_sync_pipeline.py  eco_calendar_pipeline.py  minute_data_pipeline.py  paths.py  pipeline_io.py  pipeline_manager.py  reference_data_pipeline.py
src/factors/: paths.py
src/treasury_futures/: __init__.py  data_pipeline.py  paths.py
tests/: test_csv_data_pipeline.py
(+24 files in other folders)
